# Kwikset Smart Locks - Home Assistant Custom Component
# Configuration for ruff, mypy, and other development tools

[project]
name = "kwikset-ha"
version = "0.3.5"
description = "Kwikset Smart Locks integration for Home Assistant"
requires-python = ">=3.12"

[tool.ruff]
# Target Python 3.12 (Home Assistant minimum version)
target-version = "py312"
line-length = 88

# Include custom_components and tests directories
src = ["custom_components", "tests"]

[tool.ruff.lint]
# Enable recommended rule sets for Home Assistant integrations
select = [
    "A",      # flake8-builtins
    "ASYNC",  # flake8-async - critical for HA async patterns
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "D",      # pydocstring
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary on second line (conflicts with D212)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "S101",   # Use of assert detected (needed for tests)
    "TRY003", # Long messages in exception
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and don't need docstrings
"tests/**/*.py" = ["S101", "D", "PLR2004"]
# Config flow may have complex conditional logic
"**/config_flow.py" = ["PLR0912"]

[tool.ruff.lint.isort]
# Force single-line imports for cleaner diffs
force-single-line = true
# Known first-party packages
known-first-party = ["custom_components.kwikset"]

[tool.ruff.format]
# Use double quotes (Home Assistant convention)
quote-style = "double"
# Indent with spaces
indent-style = "space"

[tool.mypy]
# Target Python 3.12
python_version = "3.12"
# Enable strict optional checking
strict_optional = true
# Warn about unused ignores
warn_unused_ignores = true
# Warn about redundant casts
warn_redundant_casts = true
# Warn about missing return statements
warn_no_return = true
# Show error codes in output
show_error_codes = true
# Follow imports for type checking
follow_imports = "normal"
# Ignore missing imports (third-party libraries without stubs)
ignore_missing_imports = true

# Per-module configuration
[[tool.mypy.overrides]]
module = "tests.*"
# Tests can be less strict
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "custom_components.kwikset.*"
# Require type annotations in custom components
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
# Pytest configuration (supplements pytest.ini)
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
